Wysigingen döär [[Special:Contributions/185.41.137.174|185.41.137.174]] ([[User talk:185.41.137.174|oaverleg]]) weaderümmedraid tot de lätste versy van [[User:Servien|Servien]]

--- a/Nedersaksisch.mw
+++ b/Nedersaksisch.mw
@@ -299,7 +299,7 @@ De huzen hebt een geute mit gruuine varve. Een Vrouw hef zolt water uut de ketel
 ===[[Tweants|Twents]]===
 ====[[Oaveriessels#West- en Zuud-Twents|West- en Zuud-Twents]]====
 De huze hebt ne gote van gruune varve. Ne vrouw hef zolt water uut een kettel in een bekske/bekken/bakkie of pötke/pötje/pöttie edoan. ''([[Wierdn]])''<br />
-De huuze hebt ne gotte van greune voarve. Ne vrouwe hef zoolt water oetn kettel in een bäkk of pötje edoan(e). ''([[Riesn]])''<br />
+De huuze hebt ne gotte van greune voarve. Ne vrouwe hef zoolt water oet een kettel in een bäkkn of pötjen edoan(e). ''([[Riesn]])''<br />
 De huuze hebt ne gotte van gruune vaarve. Ne vrouwe hef zoolt water oet een kettel in een bäksken of een pötjen edoane. ''([[Eanter]])''<br />
 De huze hebt ne götte van greune varf. Ne vrouw hef zòolt water oet een kettel in een bekske of pötje edoane. ''([[Hoksebarge]])''
 
