--- a/Orania.mw
+++ b/Orania.mw
@@ -11,13 +11,13 @@ Kritici besküldigen de plaatselike oaverheid van Orania dervan dat se de integr
 Orania had volgens een volkstelling in 2011 ungevear 892 inwuners, mär is sinds dee tyd vearer egroid nå 1.400 inwuners in 2017. Der waren in 2015 meyr as 120 bedryven in Orania evästigd, wårunder eyn van de groutste pekannuteplantasys van Süüdafrika en de groutste kooperative gemeynskapsbanke van et land. Et darp hevt syn eigen münteynheid, de ora, en syn eigen gemeyndebestüür, de Orania Verteagenwoordigende Råd. Vanweagen syn ungebrükelike karakter wördt et darp dikkels besöcht döär jurnalisten en dokumentäremakers.
 
 == Dool ==
-Volgens de stichters, is et dool van Orania üm afrikaners en höär [[kultureel arvgood|kulturele arvgood]] te beskarmen, en üm Afrikaner-selfwarksaamheid ümme te setten in de praktyk, in plaatse van allinnig mär as idee. Al et wark, van bestüürsfunktys tot an handarbeid an to, wördt üütevoord döär afrikaners; neet-afrikaner arbeidskrachten wörden neet to-elöäten, behalven as se vaardigheyden besitten dee de inwuners selv neet hebben. Inwuners van Orania willen neet bestüür wörden döär lüde selv geen afrikaners binnen. Volgens inwuners van Orania wördt de höär kultuur in de rest van die land underdrukked en wörden de kinders eharsenspööld üm engelsk te pråten.
+Volgens de stichters, is et dool van Orania üm afrikaners en höär [[kultureel arvgood|kulturele arvgood]] te beskarmen, en üm Afrikaner-selfwarksaamheid ümme te setten in de praktyk, in plaatse van allinnig mär as idee. Al et wark, van bestüürsfunktys tot an handarbeid an to, wördt üütevoord döär afrikaners; neet-afrikaner arbeidskrachten wörden neet to-elöäten, behalven as se vaardigheyden besitten dee de inwuners selv neet hebben. Inwuners van Orania willen neet bestüürd wörden döär lüde selv geen afrikaners binnen. Volgens inwuners van Orania wördt de höär kultuur in de rest van et land underdrukked en wörden de kinders eharsenspööld üm engelsk te pråten.
 
 Et dool van et darp is üm selvbeskikking möägelik te maken döär een meyrerheid van de afrikaners in de Noordwestkaap te västigen. Dit sol erealiseerd mütten wörden döär et västigen van andere vergelykbåre darpen in de kontreinen Orania te bevorderen. As et üütendelike dool van een afrikaner-meyrerheid in et gebeed bereiked is, kan een unafhangelike afrikanerståt tüsken Orania en de westküst esticht wörden, ouk wel bekend as een [[volkståt]].
 
-Carel Boshoff III, de stichter van Orania, docht oorsprungelik dat der nå 15 jår 60.000 afrikaners sik in et beougde gebeed evästigd sollen hebben. Later gav he to dat de meyste afrikaners beslöäten üm neet nå de volkståt te oaver te hüsen. Desundanks vünd he dat et noudsakelik is vöär afrikaners üm disse opty te beholden, ümdat dit afrikaners in de rest van Süüdafrika veiliger sol låten völen, en sodoonde de spanning in de rest van Süüdafrika kan doon afneamen. Boshoff hevt Orania dikkels mid [[Israël|Israel]] vergeleaken, wat as een tovlüchtsoord deent vir [[Jeuden|joaden]] van oaver de heyle wearld.
+Carel Boshoff III, de stichter van Orania, docht oorsprungelik dat der nå 15 jår 60.000 afrikaners sik in et beougde gebeed evästigd sollen hebben. Later gav he to dat de meyste afrikaners beslöäten üm neet nå de volkståt oaver te hüsen. Desundanks vünd he dat et noudsakelik is vöär afrikaners üm disse opty te beholden, ümdat dit afrikaners in de rest van Süüdafrika veiliger sol låten völen, en sodoonde de spanning in de rest van Süüdafrika kan doon afneamen. Boshoff hevt Orania dikkels mid [[Israël|Israel]] vergeleaken, wat as een tovlüchtsoord deent vöär [[Jeuden|joaden]] van oaver de heyle wearld.
 
-Nykummers seagen vake dat et beslüüt üm in Orania te gån wunen emotiveerd is döär de begeyrde üm te untsnappen van de gewelddådige misdåd wat in de rest van et land vöärkümt. Een houp inwuners waren, vöär der oaverhüsing nå Orania, slachtoffers van misdåd. Inwuners van Orania bewären dat et darp een veilige ümgeaving is wår et byvöärbeald neet nöydig is üm de döären van hüsen of autos up slot te doon.
+Nykummers seagen vake dat et beslüüt üm in Orania te gån wunen emotiveerd is döär de begeyrde üm te untsnappen an de gewelddådige misdåd wat in de rest van et land vöärkümt. Een houp inwuners waren, vöär der oaverhüsing nå Orania, slachtoffers van misdåd. Inwuners van Orania bewären dat et darp een veilige ümgeaving is wår et byvöärbeald neet nöydig is üm de döären van hüsen of autos up slot te doon.
 
 {{Dialekt|wvel||Nysassiske Skryvwyse}}
 
