*Empty MediaWiki Message*

--- a/Grunnegs.mw
+++ b/Grunnegs.mw
@@ -323,7 +323,8 @@ Verschaaidene moalen kommen minsken wel ais ien verwarren mit de bievougliekse n
 * [http://nl.wikibooks.org/wiki/Gronings Kursus Grunnegs op t droad]
 * [http://uk.youtube.com/watch?v=ujY9P7hQjAg Pèrsbericht van RTV Noord over de benuimen van Siemon Reker]
 * [http://uk.youtube.com/watch?v=4gzSfZ7FUE0&feature=PlayList&p=82762389B59B1A86&index=19 n Bericht van RTV Noord over de Leskist Grunnegs]
-* [http://www.groningerwoordenboek.nl t Grunneger woordenbouk op droad]
+* [http://www.groningsonline.nl t Grunneger woordenbouk op droad]
+* [https://www.woordwaark.nl/ Woordwaark - platform veur t Grunnegs]
 
 == Wellen ==
 '''Bouken'''
@@ -351,7 +352,8 @@ Verschaaidene moalen kommen minsken wel ais ien verwarren mit de bievougliekse n
 * [http://www.bis.uni-oldenburg.de/bisverlag/hv1/9a2-fort.pdf PDF over de dialekten tuzzen de Laauwers en de Wezer]
 * [http://www.dbnl.org/tekst/wink007alge01_01/wink007alge01_01_0022.htm Artikel over de toal- en kultuursitewoatsie ien Ditmaarzen, Holstain]
 * [http://www.rug.nl/bibliotheek/nieuws/tentoonstellingsarchief/frankenenrunen Webstee RuG over roenen mit n ploatje van t aivenholtje van Westeremden]
-* [http://www.GroningerWoordenboek.nl t Grunneger woordenbouk op droad]
+* [http://www.groningsonline.nl t Grunneger woordenbouk op droad]
+* [https://www.woordwaark.nl/ Woordwaark - platform veur t Grunnegs]
 
 {{SNLV}}
 
