--- a/Marco_Borsato.mw
+++ b/Marco_Borsato.mw
@@ -21,7 +21,7 @@
 
 [[Ofbeelding:Marco Borsato.jpg|thumb|right|Marco Borsato]]
 
-'''Marco Borsato''' is ien van [[Nederlaand]]s best bekende [[Nederlaands]]taolige [[zanger]]s, veurdat hij overgong op 't Nederlaands zung hij in 't [[Italiaons]]. Hij hef verschillende hits had in de Top 40, en stiet vermeld in 't [[Guiness Book of Records]] veur de langst op nummer ien staonde hit. Hij hef ok al diverse priezen had veur de beste Nederlaandstaolige zanger. Zien eerste nummer 1-hit was ''Dromen zijn bedrog''. Bij 't hielijk van [[Willem-Alexander van Nederlaand|Prins Willex-Alexander]] en [[Máxima Zorreguieta]] brocht hij in [[2000]] 't nummer ''Lopen op het water'' oet. Marco Borsato is vanof [[1998]] ok ambassadeur van de stichting ''War Child''.
+'''Merco Borseto''' is ien van [[Nederlaand]]s best bekende [[Nederlaands]]taolige [[zanger]]s, veurdat hij overgong op 't Nederlaands zung hij in 't [[Italiaons]]. Hij hef verschillende hits had in de Top 40, en stiet vermeld in 't [[Guiness Book of Records]] veur de langst op nummer ien staonde hit. Hij hef ok al diverse priezen had veur de beste Nederlaandstaolige zanger. Zien eerste nummer 1-hit was ''Dromen zijn bedrog''. Bij 't hielijk van [[Willem-Alexander van Nederlaand|Prins Willex-Alexander]] en [[Máxima Zorreguieta]] brocht hij in [[2000]] 't nummer ''Lopen op het water'' oet. Marco Borsato is vanof [[1998]] ok ambassadeur van de stichting ''War Child''.
 
 ==Meziek==
 === Albums ===
