*Empty MediaWiki Message*

--- a/Illinois.mw
+++ b/Illinois.mw
@@ -13,6 +13,9 @@ Et [[Illinois- en Michigankanaal]] van [[1848]] makeden vervoor tüsken de Grout
 Teagen 1900 nöm de vråge når industrywarkers to in et noorden, en koalenmynen in et midden en süden van den ståt. Dat tröäk weader immigranten an uut [[Ousteuropa|Oust-]] en [[Süüdeuropa]]. Tydens den [[Eyrsten Wearldoorlog|Eyrsten]] en [[Tweyden Wearldoorlog]] was Illinois een vöärname steade vöär et maken van wåpentüüg. Döär de kumst van vöäle [[Afrikaans-Amerikaans|afroamerikanen]] vanuut et süden untstünd der ne groute gemeynskap in med name Chicago, dee as de wearldberoomde [[jazz]]- en [[blues]]-kulturen stichteden.<ref>[http://encyclopedia.chicagohistory.org/pages/665.html Encyclopedia of Chicago. "Jazz". Bekeaken up 19 mei 2012.]</ref><ref>[http://encyclopedia.chicagohistory.org/pages/665.html Encyclopedia of Chicago. "Blues". Bekeaken up 19 mei 2012.]</ref> Chicago steyt nu bekend as [[wearldstad]].
 
 Drey presidenten van Amerika wörden eköäsen do as se in Illinois woanden [[Abraham Lincoln]], [[Ulysses S. Grant]] en [[Barack Obama]]. Ouk [[Ronald Reagan]], den as vanuut [[Kalifornie]] warkeden, groiden up Illinois. Rechtevoord hevt Illinois de ståtsspröäke ''Land van Lincoln'' as eyrbetoun an Lincoln. In den ståt is ouk de Presidentiäle Bilbiotheek en Museum van Abraham Lincoln en in de tokumst et Presidentiäle Centrum van Barack Obama.
+
+==Verwysingen==
+</references>
 {{Verenigde Stoaten}}
 [[Kategorie: Tweants artikel]]
 [[Kategorie: Verenigde Stoatn van Amerika]]
