--- a/Illinois.mw
+++ b/Illinois.mw
@@ -15,7 +15,7 @@ Teagen 1900 nöm de vråge når industrywarkers to in et noorden, en koalenmynen
 Drey presidenten van Amerika wörden eköäsen do as se in Illinois woanden [[Abraham Lincoln]], [[Ulysses S. Grant]] en [[Barack Obama]]. Ouk [[Ronald Reagan]], den as vanuut [[Kalifornie]] warkeden, groiden up Illinois. Rechtevoord hevt Illinois de ståtsspröäke ''Land van Lincoln'' as eyrbetoun an Lincoln. In den ståt is ouk de Presidentiäle Bilbiotheek en Museum van Abraham Lincoln en in de tokumst et Presidentiäle Centrum van Barack Obama.
 
 ==Verwysingen==
-{{/references}}
+{{references}}
 
 {{Verenigde Stoaten}}
 [[Kategorie: Tweants artikel]]
