--- a/Illinois.mw
+++ b/Illinois.mw
@@ -1,3 +1,20 @@
+{{Zie dv|Seet [[Illinois (döärverwysingssyde)]] vöär andere bedüdingen van Illinois.}}
+{{Amerikaanse staot
+| naam = Illinois
+| biejnoam = ''Land of Lincoln''
+| vlagge = [[Bestaand:Flag of Illinois.svg|125px|Vlagge van Illinois]]
+| wapen = [[Bestaand:Seal of Illinois.svg|110px|Wåpen van Illinois]]
+| kaorte = Map of USA IL.svg
+| heufstad = [[Springfield (Illinois)|Springfield]]
+| toe-etrejen = [[3 december]] [[1818]]
+| oppervlak laand = 140.998
+| oppervlak waoter = 4%
+| inwoeners = 12.713.634 ([[2014]])
+| dichtheid = 86,27
+| tiedzone = -6
+| ofkorting = IL
+}}
+
 '''Illinois''', spreak uut as ''ille-NOY'' ({{IPA| ˌɪləˈnɔɪ}}) is nen ståt in de [[Vereynigde Ståten van Amerika]]. Et ligt dår in de geografiske [[Groute Mearen]]streake. Et hevt et vyvde-gröätste bruto binnenlandske produkt (BBP) en van alle ståten woanet der up vyv nå de meyste lüde.
 
 Illinois hevt de groute stad [[Chicago]] in et noordousten, wat kleinere industrystäden, en groute burenbedryven in et noorden en midden van den ståt. Dårnöäst is et ryke an natuurlike grundstuvven as [[koalstof|koalen]], holt en petröäly in et süden. Dårmed hevt Illinois ne afwesselende ekonomiske grundslag. Et is een belangryk middelpünt vöär [[vervoor]]. In [[Chicagoland]], de [[metropool]] wår as Chicago deyl van is, woanet 65% van alle Illinoianen. De haven van Chicago verbindet den ståt med andere internationale havens oaver de twey höyvdweagen: vanaf de Groute Mearen oaver de [[Sunt Laurens-Seaweg]] når den [[Atlantisken Oceaan]] en vanaf de Groute Mearen når de [[Mississippi (rivier)|Mississippirivyr]], langs de [[Waterweg Illinois]] en de [[Illinoisrivyr]]. De grensen van Illinois wordet deyls bepåld döär de rivyren de Mississippi, de [[Ohio (rivyr)|Ohio]] en de [[Wabash]]. Verskeidene jåren stünd den  [[O'Hare International Airport|internationalen luchthaven O'Hare]] bekend as eyne van de drukste luchthavens van de wearld.
