*Empty MediaWiki Message*

--- a/Snooker.mw
+++ b/Snooker.mw
@@ -1,4 +1,4 @@
-'''Snooker''' is nen tåfelsport wårby as y med nen stoatstok klöärige bälle up nen bepålden volgorder in gaeter in nen tåfel müt stoaten. Den oorsprung ligt by officyrs van et [[Groot-Brittanië|britske]] leyger dee in [[India]] leygerd warren in de tweyde hälvte van de [[19e eeuw|19. eywe]].
+'''Snooker''' is nen tåfelsport wårby as y med nen stoatstok klöärige bälle up nen bepålden volgorder in gaeter in nen tåfel müt stoaten. Den oorsprung ligt by officyrs van et [[Groot-Brittannië|britske]] leyger dee in [[India]] leygerd warren in de tweyde hälvte van de [[19e eeuw|19. eywe]].
 
 Et wördt spöäld up nen rechthokigen tåfel med upstånde rände. Up et spöäldek ligt een gröön kleyd, et ''dook''. Up alle höke en up et midden van de lange syden is een gat (nen ''pot'') in de sydkanten. Med nen ''köy'', nen taps toloupenden stok, stoatet spöälers teagen nen witten bal, wårmed as se 21 klöärde bälle müt antikken üm dee in de gaeter te spöälen (te ''potten''). Yderen klöär hevt ne püntenwaerde. Den spöäler med de meyste pünten nådat alle bälle vordespöäld sint, hevt ne partye wünnen.
 
