([[c:GR|GR]]) [[c:COM:FR|File renamed]]: [[File:Staring2.jpg]] → [[File:Standbeeld van de dichter A.C.W. Staring in Vorden F.T.S. Letterie.jpg]] #2

--- a/Anthony_Christiaan_Winand_Staring.mw
+++ b/Anthony_Christiaan_Winand_Staring.mw
@@ -3,7 +3,7 @@
 |-
 |[[Ofbeelding:Anthony Christiaan Winand Staring geportretteerd door Johannes Immerzeel.jpg|thumb|180px|Plaetjen van Staring]]
 |-
-|[[Ofbeelding:Staring2.jpg|thumb|right|180px|Standbeeld van Anthony Christiaan Winand Staring in [[Vodden]]]]
+|[[Ofbeelding:Standbeeld van de dichter A.C.W. Staring in Vorden F.T.S. Letterie.jpg|thumb|right|180px|Standbeeld van Anthony Christiaan Winand Staring in [[Vodden]]]]
 |}
 Anthony Christiaan Winand Staring ([[Gendringen]], [[24 jannewaori]] [[1767]] – eigen landgood De Wildenborch in [[Vodden]], [[18 augustus]] [[1840]]) was nen Nederlandsen dichter.
 
