--- a/Vlaanderen.mw
+++ b/Vlaanderen.mw
@@ -1,5 +1,5 @@
 [[Ofbeelding:Flag of Flanders.svg|200px|thumb|Vlagge van Vlaanderen]]
-'''Vlaanderen''' is 't noordelijke deel van [[België]]. 't [[Nederlaands|Nederlaans]] is der de officiële taal en de inwoners worden Vlamingen enuumd. [[Vlaams]] 
+'''Vlaanderen''' is 't noordelijke deilstaot van [[België]]. 't [[Nederlaands|Nederlaans]] is der de officiële taal en de inwoners worden Vlamingen enuumd.
 
 De naam 'Vlaanderen' verwiest zowel naor de Vlaamse federale staot (de 'Vlaamse gemeenschap' in maotschappelijk/sociologische zin), äs naor de bestuurlijke instellingen, de ''[[Vlaamse Gemeenschap]]'' en 't ''[[Vlaams Gewest]]''. De bestuurszetel van Vlaanderen is evestigd in [[Brussel (stad)|Brussel]], hoewel disse stad ok een [[Brussels Heufdstedelijk Gewest|gewest]] vormt, naost 't Vlaamse en 't Waalse gewest.
 
