*Empty MediaWiki Message*

--- a/Oostfloandern.mw
+++ b/Oostfloandern.mw
@@ -16,7 +16,7 @@
 | Webstee = [http://www.oost-vlaanderen.be www.oost-vlaanderen.be]
 }}
 [[Bestaand:Oost-VlaanderenGemeenten.png|right|Gemaintes in Oostfloandern]]
-'''Oostfloandern''' is ain van de vief provìnzies van [[Vlaonderen|Floandern]] en ain van de tiene van [[Belgie]]. t Telde op 1 juli 2005 1.383.647 inwoner. De heufdstad is [[Gent]] ([[Fraans|fa]]: ''Gand'') 
+'''Oostfloandern''' is ain van de vief provìnzies van [[Vlaonderen|Floandern]] en ain van de tiene van [[Belgie]]. t Telde op 1 juli 2005 1.383.647 inwoner. De heufdstad is [[Gent]].
 
 t Grenst in t westen aan [[Westfloandern]], in t noorden aan [[Zeelaand]], in t oosten aan [[Antwaarp (provìnzie)|Antwaarp]] en [[Floams Broabant]] en in t zuden aan [[Hainego]]. De belangriekste revier in de provìnzie is de [[Schelde|Schelle]].
 
