--- a/Brazilië.mw
+++ b/Brazilië.mw
@@ -278,3 +278,4 @@ Bie wet is de [[Braziliaanse Gebarensproake]] (LIBRAS) verplicht in oonderwies, 
 {{Dialekt|twd|Riessen|Algemene Nedersaksiese Schriefwieze}}
 
 [[Kategorie:Brazilië]]
+[[Kategorie:Laand]]
