--- a/Argentinië.mw
+++ b/Argentinië.mw
@@ -23,3 +23,4 @@ De grootste stad en heufdstad is [[Buenos Aires]]
 {{Commons|Argentina}}
 [[Kategorie:Achterhooks artikel]]
 [[Kategorie:Argentinie]]
+[[Kategorie:Laand]]
