Dailstoaten in België

--- a/Dailstoat.mw
+++ b/Dailstoat.mw
@@ -45,5 +45,9 @@ n '''Dailstoat''' is n bestuursainhaid dij veural bruukt wordt deur grode landen
 * [[Wienen]] (Wien)
 * Börgenlaand (Burgenland)
 
+== Dailstoaten in België==
+* [[Vlaanderen]]
+* [[Waalnlaand]]
+
 [[Kategorie:Grunnegs artikel]]
 [[Kategorie:Laand|*]]
