/* Dailstoaten in België */

--- a/Dailstoat.mw
+++ b/Dailstoat.mw
@@ -46,6 +46,7 @@ n '''Dailstoat''' is n bestuursainhaid dij veural bruukt wordt deur grode landen
 * Börgenlaand (Burgenland)
 
 == Dailstoaten in België==
+* Brussel
 * [[Vlaanderen]]
 * [[Waalnlaand]]
 
