*Empty MediaWiki Message*

--- a/Kenia.mw
+++ b/Kenia.mw
@@ -74,7 +74,7 @@ Later, do as in de 17. eywe de Swahiliküste under hearskåppye van de [[Omani-a
 
 Et [[Swahili]], ne bantuspråke med leynwöörde uut arabiske, persiske en andere ousterske en süüdasiastiske streaken (en inmiddels ouk engelsk), wör uuteindelik de ''[[lingua franca]]'' vöär handel tüsken de verskillende volker.
 
-Vöär hunderden jåren hevt de keniaanske küste ne belangryke steade weasd vöär handelslüde en untdekkingsvöärders. In [[1414]] köäm den [[China|chineesken]] handelsreisiger [[Zheng He]] uut de [[Ming-dynasty]] når de oust-afrikaanske küste tydens syne lätste [[Skatreisen||skatreise]].<ref>[https://www.pbs.org/wgbh/nova/ancient/ancient-chinese-explorers.html PBS.org. "Ancient chinese explorers."] Bekeaken up 12 oktober 2015.</ref> Veerentachtig jår later, in [[1498]], köäm den portugeesken untdekkingsreisiger [[Vasco da Gama]] in [[Malindi]].
+Vöär hunderden jåren hevt de keniaanske küste ne belangryke steade weasd vöär handelslüde en untdekkingsvöärders. In [[1414]] köäm den [[China|chineesken]] handelsreisiger [[Zheng He]] uut de [[Ming-dynasty]] når de oust-afrikaanske küste tydens syne lätste [[Skatreisen|skatreise]].<ref>[https://www.pbs.org/wgbh/nova/ancient/ancient-chinese-explorers.html PBS.org. "Ancient chinese explorers."] Bekeaken up 12 oktober 2015.</ref> Veerentachtig jår later, in [[1498]], köäm den portugeesken untdekkingsreisiger [[Vasco da Gama]] in [[Malindi]].
 
 ===Britsk Kenia (1888–1962)===
 [[File:Africa 1909 16a.png|thumb|[[Britsk Oust-Afrika]] in 1909]]
