*Empty MediaWiki Message*

--- a/Deelstoaten_van_Duutslaand.mw
+++ b/Deelstoaten_van_Duutslaand.mw
@@ -207,7 +207,7 @@ Via n [[Bondsroad(Duutslaand)|Bondsroad]] bint de dealstoatregearign automoaties
 
 Nen dealstoat benöm n antal van zinne dealstoatministern töt lid van n Bondsroad; de stemn van eann dealstoat könt alleannig ''en bloc'' oet-bracht wörn. Mangs wa mött twea partiejn in ne dealstoatregearige samnwarkn, tarwiel eane van dee partiejn öp federoal nivoo in de opposisie zet. As de't eval is dan stöm den dealstoat oft neutroal. n Lid van n Bondsroad hef t recht öm te proatn in n Bondsdag.
 
-De dealstoatverkiezign hebt ok invlood öp de verkiezige van n Bondspresident, t stoatsheufd. n Hölf van de kiesmänne en kiesvraawleu in de [[Bondsgadderige (Duutslaand)|Bondsgadderige]] wört keuzn deur dealstoatparlemeantn. Biej t zeukn noar nen kandidoat bint ministern-presidentn meender oft de nörmoale keuze. De bondspresidentn [[Richard von Weizsäcker]] ([[West-Berlien]]), [[Johannes Rau]] (Noordrien-Westföale]] en [[Christian Wulff]] (Neersaksen) warn earder ministern-presidentn.
+De dealstoatverkiezign hebt ok invlood öp de verkiezige van n Bondspresident, t stoatsheufd. n Hölf van de kiesmänne en kiesvraawleu in de [[Bondsgadderige (Duutslaand)|Bondsgadderige]] wört keuzn deur dealstoatparlemeantn. Biej t zeukn noar nen kandidoat bint ministern-presidentn meender oft de nörmoale keuze. De bondspresidentn [[Richard von Weizsäcker]] ([[West-Berlien]]), [[Johannes Rau]] ([[Noordrien-Westföale]] en [[Christian Wulff]] (Neersaksen) warn earder ministern-presidentn.
 
 De federoale Groondwette bepöal det alle Duutsers in t gemean önner dezölfde ömstaandigheadn leawn könn mött. Öm de verskiln quoa riekdöm nich te gröt te loatn wörn is d'r nen ''Länderfinanzausgleich'': de riekre dealstöate mött an t end van t joar geald ofstoan an de ärmere. De Stadstaaten kriegt deur öarn demogroafiesn struktuur mear geald as Flächenländer. Wieter betöal n Bond an ärmere dealstöate, de ''Bundesergänzungszuweisungen''. In de riekre dealstöate is d'r völn kritiek öp n ''Ländesfinanzausgleich''; zee zegt det deur de transferbetoalign de ärmere dealstöate gin motief hebt öm spoarzöamer te wean. t Geet eaignlik moar öm 1-2% van ne dealstoatbegreutige.
 
