*Empty MediaWiki Message*

--- a/Keltiese_talen.mw
+++ b/Keltiese_talen.mw
@@ -30,7 +30,7 @@ Alles sameneneumen waren der in totaal in t jaor [[2000]] roewweg n miljoen eers
 |}
 
 ===Mengtalen===
-* [[Shelta]], veurnamelik ebaseerd op [[Iers-Gaols]] mit onbekende invleujen (zo'n 86.000 sprekers in 2009).<ref>[http://www.ethnologue.com/show_language.asp?code=sth Ethnologue: Shelta]]</ref>
+* [[Shelta]], veurnamelik ebaseerd op [[Iers-Gaols]] mit onbekende invleujen (zo'n 86.000 sprekers in 2009).<ref>[http://www.ethnologue.com/show_language.asp?code=sth Ethnologue: Shelta]</ref>
 * Sommige vormen van t [[Kumries-Romani]] of Kååle die Romani, Kumries en Engels mengden (uutestörven).<ref>[http://romani.uni-graz.at/romlex/dialects.xml ROMLEX: Romani-dialekten]</ref>
 * [[Beurla-reagaird]], de taal van de Hooglaand-reizigers
 
