*Empty MediaWiki Message*

--- a/Kongo_(rivier).mw
+++ b/Kongo_(rivier).mw
@@ -5,7 +5,7 @@ De Kongo begeent in [[Zambia]] as de [[Chambezi]]-rivier. Streumopwearts van de 
 
 De rivier keump twee moal vuurbie den [[eawenaar]]. et [[Kongostreumgebeed]] beslöt ne vlakte van 4 miljoen kilometer in et veerkaant. Det is 13% van et hele Afrikaanse laand. 
 
-De laanden [[Kongo-Brazzaville]] en [[Kongo-Kinsjasa]] daankt öaren naam an de rivier. Wiedters krig de Kongo langs verskillende kleanere rivieren water vanoet [[Angola]], [[Boeroendi]], [[Kameroen]], de [[Mid-Afrikaanse Reppubliek]], [[Gabon]], [[Roewanda]], [[Tanzania]] en Zambia]].
+De laanden [[Kongo-Brazzaville]] en [[Kongo-Kinsjasa]] daankt öaren naam an de rivier. Wiedters krig de Kongo langs verskillende kleanere rivieren water vanoet [[Angola]], [[Boeroendi]], [[Kameroen]], de [[Mid-Afrikaanse Reppubliek]], [[Gabon]], [[Roewanda]], [[Tanzania]] en [[Zambia]].
 
 [[Kategorie:Tweants artikel]]
 [[Kategorie:Revier]]
