--- a/Oregon.mw
+++ b/Oregon.mw
@@ -18,7 +18,7 @@
 [[Bestaand:Map of Oregon NA.png|thumb|375px|Kaarte van Oregon<ref>[http://nationalatlas.gov/printable/images/pdf/reference/pagegen_or.pdf Map of Oregon] (PDF). Reston, Virginia: Interior Geological Survey, 2004</ref>]]
 '''Oregon''' is nen stoat in et noordwesten van de [[Verenigde Stoaten]]. Et ligt in et westen an de [[Pacifiese Oseaan]], op et noorden tegen [[Washington (stoat)|Washington]], op et zuden an [[Kalifornië]], op et oosten  an [[Idaho]] en op et zuudoosten an [[Nevada]]. De noordgreanze wörd vuur een beheurlik deel vastelegd duur den rivier de [[Columbia (rivier)|Columbia]]. De oostergreanze wörd etrökken duur de [[Snake River]] (Slangenrivier). De heuwdstad is [[Salem (Oregon)|Salem]]. De grötste stad is [[Portland (Oregon)|Portland]]. Met zinne vuursteaden hef dee stad 2.314.554 inwonners ([[2013]]). In Oregon wont 3.970.239 leu.
 
-Der wonden verskeaidene [[Inheemse Amerikanen|Inheemse volker]] in Oregon vuurdet der [[Europa (werelddeel)|Europese]] haandelsleu, verkenners en intrekkers kömmen. [[Groot-Brittanje|Britse]] en [[Kanada|Fraans Kanadese]] vellenverkopers maakten verskel oawer wee as et heurden. Doarop wör in [[1843]] et [[Oregonlaand]] esticht]]. Op den [[14 febrewaori|14den februwoari]] [[1859]] wör et den 33sten stoat van de Verenigde Stoaten.
+Der wonden verskeaidene [[Inheemse Amerikanen|Inheemse volker]] in Oregon vuurdet der [[Europa (werelddeel)|Europese]] haandelsleu, verkenners en intrekkers kömmen. [[Groot-Brittanje|Britse]] en [[Kanada|Fraans Kanadese]] vellenverkopers maakten verskel oawer wee as et heurden. Doarop wör in [[1843]] et [[Oregonlaand]] esticht. Op den [[14 febrewaori|14den februwoari]] [[1859]] wör et den 33sten stoat van de Verenigde Stoaten.
 
 Oregon hef een verskeiden laandskop. In et westen he'j de [[Pasifiese kustliene]]. Et ligt deels op de de [[Cascade]]boargketten, dee zik oetstrekt vanoet [[Brits Columbia]] in [[Kanada]] töt an Oregon. Der zeent verskillende soorten woold, mangs [[moatig reagenwoold]], [[loofboom|loof-]] en [[noaldboom|noaldbeume]] en op de heugere groond de [[High Desert (Oregon)]] (''Hoge Weuste''). Det leste löp oawer et meeste van et oosten töt an et [[Grote Bekken]]. De grote [[Pinophyta|koniferen]] zo as de [[Douglassparre]] in et reagenachtige westen stekt of bie de lechtere en dreugere [[Danne]]n- en [[Juniperus occidentalis|Juniper]]bossen in et oosten. De völle E[[elze]]n in et westen zorget vuur et [[nitrogeen]] van de koniferen. Vanoet et middeln van Oregon loopt der halfdreuge [[buskenwoold]]e, [[prairie]]s, [[weuste]]n, [[steppe]]n en weaides noar et oosten.
 
