Wysigingen döär [[Special:Contributions/86.81.22.163|86.81.22.163]] ([[User talk:86.81.22.163|oaverleg]]) weaderümmedraid tot de lätste versy van [[User:Servien|Servien]]

--- a/Geert_Wilders.mw
+++ b/Geert_Wilders.mw
@@ -1,4 +1,4 @@
-[[Bestaand: Geert Wilders Zwolle 012.jpg|thumb|right|200px|Geert Wilders in [[Zwolle]]]] haha grappig nu het land uit
+[[Bestaand: Geert Wilders Zwolle 012.jpg|thumb|right|200px|Geert Wilders in [[Zwolle]]]]
 
 '''Geert Wilders''' ([[Venlo]], [[6 september]] [[1963]]) is nen [[Neerlaand]]sen politikus van de [[Partij voor de Vrijheid|PVV]] (''Partieje vuur de Vriejhaeid''), en in naam van disse partieje ook fraksielaeider in de [[Tweede Kamer]]. Umdet de PVV gedoogpartieje was in de regearing oonder [[Mark Rutte]], wat n meenderhaeidskabinet was wat bestond oet de [[VVD]] en t [[CDA]], was he in [[2010]] metbedaenker van disse regearing.
 
