--- a/Zunne.mw
+++ b/Zunne.mw
@@ -34,7 +34,7 @@ Bie n [[zunnewind]] komt der hail veul stroalen en magnetische dailtjes vanof de
 * [[Drèents]]: ''zun{{small()|ne}}'', ''luie Evert''
 * [[Grunnegs]]: ''zunne''
 * [[Stellingwarfs]]: ''zunne'', ''Evert'', ''luie Evert''
-* [[Tweants]]: ''zunne'' of ''zönne''
+* [[Tweants]]: ''zun(ne)''
 * [[Veluws]]: ''zunne'' of ''zon''
 
 [[Kategorie:Grunnegs artikel]]
