*Empty MediaWiki Message*

--- a/Herman_Finkers.mw
+++ b/Herman_Finkers.mw
@@ -1,5 +1,7 @@
 {{etelazie}}[[Ofbeelding:Herman Finkers.jpg|thumb|300px|Herman Finkers]]
-'''Hermenegildus Felix Victor Maria (Herman) Finkers''' (Tweantse oetsproak: ''Hemman Feenkers'')  ([[Almelo]], [[9 december]] [[1954]]) is nen [[Tweante|Tweantsn]] grapnmaker, skriewer, zanger en veurvechter van 't Twents, den bekeand is wördn deur zienn dreugn humor. Seend at hee in 2002 te heurn kreag dat e leukemie hef, hef e nen bestn zet genne vuurstellingn meer gevn. Vanof oktober 2007 steet e wier op de plaankn.
+'''Hermenegildus Felix Victor Maria (Herman) Finkers''' ([[Almelo]], [[9 december]] [[1954]]) is nen [[Tweante|Tweantsn]] grapnmaker, skriewer, zanger en veurvechter van 't Twents, den bekeand is wördn deur zienn dreugn humor. 
+
+Seend at hee in 2002 te heurn kreag dat e leukemie hef, hef e nen bestn zet genne vuurstellingn meer gevn. Vanof oktober 2007 steet e wier op de plaankn.
 
 Finkers is de leste joarn slim drok veur 't [[Twents]]. In zin leste kabaretveurstelling wisseln hee Hollaands al of met Plat, mer maakten zik ok drok veur ne anpassing van de skriefwieze van 'n Kreenk veur de Twentse Sproake. In [[2015]] haalden hee ne regionaaln hit met zien [[Karnaval|Karnavalsnommer]] "Koo wit de Floo", wat geet oawer zinne geboortestea. Finkers wont rechtevoort in [[Böaningn]].
 
@@ -11,22 +13,24 @@ Dat t roomse geloof ok now nog belangriek vuur um is, wördn dudelik doo't e in 
 Op [[29 april]] [[2003]] wördn Finkers beneumd töt [[Ridder in de Orde van de Nederlandse Leeuw]]. Op [[16 januari]] [[2007]] kreag e ok ne [[Goaldne Haarpe]].
 
 ==Kabaretkarrière==
-Oons Hermänken wördn geboorn en optrökn in t Tweantse [[Almelo]], woar e noar de school gung en woar e ok op de [[Hogere börgerschole|HBS]] zat. Ziene grapnmakeriejkarrière begun ongewoon doo't e zien stottern töt zien haandelsmeark promoveern. Zien eerste program hetn ''Op Zwart Zangzaad'' (''Op Zwart Zangzoad''), noar de [[Grunnen (stad)|Grönningse]] studeantnhumorvereaniging woar zien breur [[Wilfried Finkers]] oprichter en vuurzitter van was.
+Finkers wördn geboorn en optrökn in t Tweantse [[Almelo]], woar e noar de school gung en woar e ok op de [[Hogere börgerschole|HBS]] zat. Ziene grapnmakeriejloopbane begun ongewoon doo't e zien stottern töt zien haandelsmeark promoveern. Zien eerste program hetn ''Op Zwart Zangzaad'' (''Op Zwart Zangzoad''), noar de [[Grunnen (stad)|Grönningse]] studeantnhumorvereaniging woar zien breur [[Wilfried Finkers]] oprichter en vuurzitter van was.
 
-In [[1979]] wun Finkers n tweedn pries op t [[Dealft|Dealftse]] [[Camarettenfestivaal]], as ok n publieks- en n persoonlikheidspries. Töt n eand van de joarn neegntig har e völ sukses met t ene program noa t aandere. Vanof [[1987]] döa zien breur Wilfried met met t oetprakkezeern van materiaal en met t weark achter de schearmn. Wilfried kwam of en too zölf ok de bönne op, steavaste as steunteligen döl.
+In [[1979]] wun Finkers n tweedn pries op t [[Dealft|Dealftse]] [[Camarettenfestival]], as ok n publieks- en n persoonlikheidspries. Töt et eande van de joarn neegntig har e völ sukses met t ene program noa t aandere. Vanof [[1987]] döa zien breur Wilfried met met t oetprakkezeern van materiaal en met t weark achter de schearmn. Wilfried kwam of en too zölf ok de bönne op, steavaste as steunteligen döl.
 
 In [[2000]] höal Herman um ziene gezoondhead tiedelik op met vuurstellingn doon. Toch is e in [[2005]] wier begunn met t vuurbereidn van ne nieje sjoo.
 
-Herman Finkers is nen echtn dreugn in ziene vuurstellingn. A'j ne vergeliekt met aandere grapnmakers van vandaag-an-n-dag, is zien tempo leag te neumn, mer dat wördt kompenseerd duur ne perfekte timing vuur elke grap, woarbiej e zien vreandelike, licht keenderlike oetstroaling voloet broekt. De humor lig biej Finkers in zien oetgedachte weurdgrapn, umgekeerde logika en visuele gräpkes. Doarbiej döt e nich wat oet op wat der in t niejs is.
+Herman Finkers is nen echtn dreugn in ziene vuurstellingn. A'j ne vergeliekt met aandere grapnmakers van vandaag-an-n-dag, is zien tempo leag te neumn, mer dat wördt kompenseerd duur ne perfekte timing vuur elke grap, woarbiej e zien vreandelike, licht keenderlike oetstroaling voloet broekt. De humor lig biej Finkers in zien oetedachte woordgrapn, umdreide logika en visuele gräpkes. Doarbiej döt e nich wat oet op wat der in t niejs is.
 
-In ziene beginjoarn harn ziene sjoos benaamd losse geschichtn, niejsberichtn, tilfoongesprekn en zoogeneumde ''one-man-sketches'' en maakn hee hoast nich gebroek van t decor: een rood gordien was zien ennigste achtergroond. In latere sjoos wördn de decors oetgebreider en wördn doar aait visuele grapn met oethaald. Hee deu un eankeld moal tehoop met [[Brigitte Kaandorp]], umdat eer kabaretsjoos wat stiel betref te vergeliekn bunt met de sjoos van Herman Finkers. In zien program ''Geen spatader veranderd'' (de Hollaandse versie van ''Gen spatoader aans'' Hollaands) zung e biejvuurbeeld met eer n eroties duët in ne, alleen in naam, rechtstreekse verbeending.
+In ziene beginjoarn harn ziene sjoos benaamd losse verhaaln, niejsberichtn, tilfoongesprekn en zoogeneumde ''one-man-sketches'' en maakn hee hoast nich gebroek van t decor: een rood gordien was zien ennigste achtergroond. In latere sjoos wördn de decors oetgebreider en wördn doar aait visuele grapn met oethaald. Hee deu een eankeld moal tehoop met [[Brigitte Kaandorp]], umdat eer kabaretsjoos wat stiel betref te vergeliekn bunt met de sjoos van Herman Finkers. In zien program ''Geen spatader veranderd'' (de Hollaandse versie van ''Gen spatoader aans'' Hollaands) zung e biejvuurbeeld met eer n eroties duët in ne, alleen in naam, rechtstreekse verbeending.
 
 ==Aandere aktiviteitn==
-Nöast grapnmakeriej höaldt Finkers zik gangs met de [[Tweants|Tweantse taal]]. Zoo hef e zien eign spelling vuur t Tweants ontwikkeld, ne kombinoasie van de [[Standaard Schriefwieze]] en de schriefwieze van n [[Kreenk vuur de Twentse sproak]], wat e ''Eigenwies'' hef neumd. Zien leste twee vuurstellingn gaf e ok in t Tweants. Ok wearkt hee met an de kampanje ''Twents doar is niks mis met'' van t [[Van Deinse Instituut]] in [[Eanske]]. In de [[Nederlaand|Neerlaand]]se tilvisieserie [[Baantjer (tilvisie)|Baantjer]] spöaln hee n moal nen boer oet [[Weersel]]. Hee deu dan gewoon plat. 
+Nöast grapnmakeriej höaldt Finkers zik gangs met de [[Tweants|Tweantse taal]]. Zoo hef e zien eign spelling vuur t Tweants ontwikkeld, ne kombinoasie van de [[Standaard Schriefwieze]] en de schriefwieze van n [[Kreenk vuur de Twentse sproak]], wat e de ''Eigenwieze'' hef neumd. Zien leste twee vuurstellingn gaf e ok in t Tweants. Ok wearkt hee met an de kampanje ''Twents doar is niks mis met'' van t [[Van Deinse Instituut]] in [[Eanske]]. In de [[Nederlaand|Neerlaand]]se tilvisieserie [[Baantjer (tilvisie)|Baantjer]] spöaln hee n moal nen boer oet [[Weersel]]. Hee deu dan gewoon plat. 
 
-Op [[2 oktober]] [[2005]] kwam de (vuur n groot deel) in t Tweants sprökn soapriege [[Van Jonge Leu en Oale Groond]] van regisseur [[Johan Nijenhuis]] vuur t eerst op [[tillevisie|tilvisie]] biej [[RTV Oost]]. Finkers was doarbiej kreatief roadgeaver, vuural duur t in good Tweants vertaaln van alle dialoogn. Ook spöln hee ne belangrieke rol in de riege.
+Op [[2 oktober]] [[2005]] kwam de (vuur n groot deel) in t Tweants sprökn soapriege [[Van Jonge Leu en Oale Groond]] van regisseur [[Johan Nijenhuis]] vuur t eerst op [[tillevisie|tilvisie]] biej [[RTV Oost]]. Finkers was doarbiej kreatief roadgeaver, vuural duur t in good Tweants umzetn van alle dialoogn. Ook spöln hee ne belangrieke rol in de riege.
 
 Veur de tentoonstellings in t museum van [[TwentseWelle]] hef Finkers de Tweantse rondleidingstekste insprökn.
+
+Vöär 2020 steet der nen komiesn spölfilm van em op de rolle: ''De Beentjes van St. Hildegard." De van oorsprong Tsjechische film deu Finkers in et Twents umzetn. Heezölf dut de heuvdrol spöln, med [[Johanna van Buuren]] as teagenspölster.
 
 ==Priezen==
 In 2011 kreeg Finkers de [[Groenman-taalpries]] van [[Onze Taal]].
