*Empty MediaWiki Message*

--- a/Gent.mw
+++ b/Gent.mw
@@ -1,40 +1,27 @@
-{| {{prettytable}} border=1 cellpadding="1" cellspacing="0" align="right"
-|-----
-! colspan="2" bgcolor="#E0E0E0" align="center"|Stad Gent
-|-----
-! colspan="2" align="center" |[[Ofbeelding:Ghent from above b.JPG|250px|Gent in Oostfloandern]]
-|-----
-! colspan="2" bgcolor="#E0E0E0" align="center" |Geografie
-|-----
-|Gewest
-|[[Vlaanderen]]
-|-----
-|Pervinsie
-|[[Oostfloandern]]
-|-----
-|[[Arrondissement]]
-|[[Gent (arrondissement)|Gent]]
-|-----
-|Geografische coördinaten
-|51°3' [[Breedtegraod|NB]] 3°42' [[Lengtegraod|OL]]
-|-----
-|Oppervlak
-|156.18 km²
-|-----
-! colspan="2" bgcolor="#E0E0E0" align="center" |Bevolking (Bron: NIS)
-|-----
-|Inwoners ''<small>(01/01/2019)</small>''
-|262.219
-|-----
-|Mannen<br />Vrouwluui
-|49,85%<br />50,15%
-|-----
-|[[Bevolkingsdichheid|Dichtheid]]
-|1678,94/km²
-|}
+{{Plaatse
+| naam = Gent
+| soorte = Stad
+| bestandsnaam vlagge = Vlag_van_Gent.svg
+| bestandsnaam wapen = Wapen_van_Gent.svg
+| region = BE-VLG
+| breedtegraod = 51/3//N
+| lengtegraod = 3/42//E
+| inwonners = 262.219
+| daotum inwonners = januari 2019
+| öppervlakte = 156.18
+| öppervlakte laand =
+| öppervlakte water =
+| provinsie = 
+| gemeente = 
+| dichtheid = 1678,94
+| verkeersaoder = 
+| netnummer = 
+| postkode = 
+| webstae =
+}}
 '''Gent''' is de heufdstad en de grootste gemeente van [[Oostfloandern]]. 't Grondgebied is zo'n 156.18 [[vierkaante kilometer|km²]] en op [[1 jannewaori]] [[2019]] woonde der meer as 262.000 luui. Deelgemeentes bint Gent, [[Mariakerke (Gent)|Mariakerke]], [[Drongen]], [[Wondelgem]], [[Sint-Amandsberg]], [[Oostakker]], [[Desteldonk]], [[Mendonk]], [[Sint-Kruis-Winkel]], [[Gentbrugge]], [[Ledeberg]], [[Afsnee]], [[Sint-Denijs-Westrem]] en [[Zwijnaarde]]. Burgemeister is [[Mathias De Clercq]] van de [[Open VLD]].
 
-== Jumelages ==
+== Süsterstäden ==
 * [[Saint-Raphaël (Var)|Saint-Raphaël]]
 * [[Wiesbaden]]
 * [[Kanazawa]]
@@ -44,12 +31,9 @@
 * [[Nottingham]]
 
 == Uutgaonde verwiezingen ==
-* [https://stad.gent Website van Gent]
-* [https://visit.gent.be Toeristische website van Gent]
-* [https://web.archive.org/web/20090908211940/http://www.dekenijen.be/ Gebuurten of dekenijen van Gent]
-
-
 {{commonscat|Gent}}
+* [https://stad.gent Websteade van Gent]
+* [https://visit.gent.be Turistiske websteade van Gent]
 
 [[Kategorie:Stad in België]]
 [[Kategorie:Vlaandern]]
