*Empty MediaWiki Message*

--- a/Gent.mw
+++ b/Gent.mw
@@ -11,7 +11,7 @@
 | öppervlakte = 156.18
 | öppervlakte laand =
 | öppervlakte water =
-| provinsie = 
+| provinsie = [[Oostfloandern]]
 | gemeente = 
 | dichtheid = 1678,94
 | verkeersaoder = 
@@ -19,7 +19,7 @@
 | postkode = 
 | webstae =
 }}
-'''Gent''' is de heufdstad en de grootste gemeente van [[Oostfloandern]]. 't Grondgebied is zo'n 156.18 [[vierkaante kilometer|km²]] en op [[1 jannewaori]] [[2019]] woonde der meer as 262.000 luui. Deelgemeentes bint Gent, [[Mariakerke (Gent)|Mariakerke]], [[Drongen]], [[Wondelgem]], [[Sint-Amandsberg]], [[Oostakker]], [[Desteldonk]], [[Mendonk]], [[Sint-Kruis-Winkel]], [[Gentbrugge]], [[Ledeberg]], [[Afsnee]], [[Sint-Denijs-Westrem]] en [[Zwijnaarde]]. Burgemeister is [[Mathias De Clercq]] van de [[Open VLD]].
+'''Gent''' is de höyvdstad en de groutste gemeynde van [[Oostfloandern|Oustvlaanderen]]. Et grundgebeed is so'n 156.18 [[vierkaante kilometer|km²]] en up [[1 jannewaori|1 januari]] [[2019]] wuunde der meyr as 262.000 lüde. Deylgemeynden binnen Gent, [[Mariakerke (Gent)|Mariakerke]], [[Drongen]], [[Wondelgem]], [[Sint-Amandsberg]], [[Oostakker]], [[Desteldonk]], [[Mendonk]], [[Sint-Kruis-Winkel]], [[Gentbrugge]], [[Ledeberg]], [[Afsnee]], [[Sint-Denijs-Westrem]] en [[Zwijnaarde]]. 
 
 == Süsterstäden ==
 * [[Saint-Raphaël (Var)|Saint-Raphaël]]
@@ -30,7 +30,7 @@
 * [[Mohammedia]]
 * [[Nottingham]]
 
-== Uutgaonde verwiezingen ==
+== Üütgånde verwysingen ==
 {{commonscat|Gent}}
 * [https://stad.gent Websteade van Gent]
 * [https://visit.gent.be Turistiske websteade van Gent]
