*Empty MediaWiki Message*

--- a/Khoisan_(volk).mw
+++ b/Khoisan_(volk).mw
@@ -1,6 +1,6 @@
 '''Khoisan''' ({{IPA|ˈkɔɪsan}}), of volgens de hüdige [[khoekhoegowab]]-skryvwyse '''Khoe-Sān''' (uutspreaken as [kxʰoesaːn]) is ne sammelnaam vöär de inheymske lüde in et süden van [[Afrika]]. Dåründer valt de [[Khoekhoen]] en de [[San (volk)|San]]. Se wordet ouk wal es ''büskesmänne'' nöömd ([[afrikaansk]]: ''Boesmans''en [[engels]]: ''Bushmen'',<ref>Den antropoloug Henry Harpending van de Universiteit van Utah, den as med de beroomde klik-spreakende [[jager-verzamelaars|jager-sammelders]] woaned hevt, segt: "In the jåren '70 spreidden sik de name ''San'' in Europa en Amerika ümdat et politik korrekt leak, terwyl as ''büskesmänne'' neaderbügend en seksistisk klünk. De jager-sammelders hadden selv nooit ne name vöär sikselv, in gin enkele van de språken dee se spreaket. ''San'' was jüüst et beleydigende woord dee de Khoi (een herdersvolk) vöär de büskesmänne gebröäken. [...] Y mosten ymand gin ''San'' nömen wår as hee by was. Ik bleav gewoon büskesmänne gebruken en wör döär de polikorbrigade terügge floited. [...]" [http://www.upi.com/Odd_News/2002/06/20/Feature-Name-game-Inuit-or-Eskimo/UPI-43191024597290/ Sailer, Steve. "Name game – ‘Inuit’ or ‘Eskimo’?  Bekeaken up 12 January 2014.] 20 June 2002</ref> når et [[nederlaands|neaderlandsk]]e ''bosjesman'' en ''Saake'' in et [[Nǁng (sproake)|Nǁng]]).
 
-Med name de Khoekhoen warren eyrder bekend as ''hottentotten”, ne [[onomatopee]] uut et neaderlandske ''hot-en-tot'' vöär de [[klikken]] dee in de Khoekhoespråken vöärkoamet. By öäre vroge kolonisaty van de Kaap gavven de neaderlanders de Khoekhoen drank üm se uut te lokken nen rituelen dans up te voren. De tekst by de dans klüng vöär neaderlanders as "hot-en-tot".
+Med name de Khoekhoen warren eyrder bekend as ''hottentotten'', ne [[onomatopee]] uut et neaderlandske ''hot-en-tot'' vöär de [[klikken]] dee in de Khoekhoespråken vöärkoamet. By öäre vroge kolonisaty van de Kaap gavven de neaderlanders de Khoekhoen drank üm se uut te lokken nen rituelen dans up te voren. De tekst by de dans klüng vöär neaderlanders as "hot-en-tot".
 
 Van de Sān wördt vake dacht dat se jager-sammelders sint in de [[kalahariwöyste]] en deylen van [[Botswana]], [[Namibie]], [[Angola]], [[Zambia]], [[Zimbabwe]], [[Lesotho]] en [[Süüdafrika]]. Et woord ''sān'' kümt uut et Khoekhoe en bedüdet enkel sammelders ("dee wat saken van de grund upkryget") dee gin vey holdet. So gebröäken se et vöär alle jager-sammeldergrupen in südelik Afrika en slöög vöäral up de leavenswyse en nit up volksafkoamst. ''Khoekhoen'' hevt an de andere kante wal ne etniske bedüding en slöt up een antal grupen dee nauw verwante språken küürt. See leidet een bestån van [[herders]] in de Süüdafrikaanske [[Kaapstreake]] en Namibie, wår as de Khoekhoevolker [[Nama (volk)|Nama]] en [[Damara (volk)|Damara]] leavt.
 
