--- a/Khoisan_(volk).mw
+++ b/Khoisan_(volk).mw
@@ -22,6 +22,21 @@ Pelane Phakgadi, [http://ewn.co.za/2017/12/24/ramaphosa-meets-aggrieved-khoisan-
 [[File:San-Mann beim Sammeln der Teufelskralle (Namibia).jpg|thumb|upright|San-kearl by et [[Harpagophytum|düvelsklauw]] sammelen]]
 
 ==Geskydenisse==
+[[File:InitialExpansionMitogenome.PNG|thumb|upright|Skatte oorsprunglike gebeed van de [[haplogrup]]en L0d and L0k in südelik Afrika, dateerd up 90.000 jår terügge döär Behar et al. (2008).<ref>Behar, Doron M. Villems, Richard. Soodyall, Himla. Blue-Smith, Jason. Pereira, Luisa. Metspalu, Ene. Scozzari, Rosaria. Makkan, Heeran. Tzur, Shay. Comas, David. Bertranpetit, Jaume. Quintana-Murci, Lluis. Tyler-Smith, Chris. Wells, R. Spencer. Rosset, Saharon. "The Dawn of Human Matrilineal Diversity." The American Journal of Human Genetics, mei 2008. Vol 82 Is 5. p 1130–1140. Beide de boumfylogeny en coalescentybereakeningen geavt an dat Khoisan-afstamming langs de moderlyne sik 90.000 – 150.000 jår eleaden afspleyt van de rest van de menskelike mtDNA-grup.</ref>]]
+
+Dacht wördt dat de vöärolden van de hüdige khoisan 150.000 jår terügge al når südelik Afrika tröäken, meskeen wal vöär 260.000 jår<ref>Schlebusch, Carina M. Malmström, Helena. Günther, Torsten. Sjödin, Per. Coutinho, Alexandra. Edlund, Hanna. Munters, Arielle R. Vicent, Mário. Steyn, Maryna. Soodyall, Himla. Lombard, Marlize. Jakobsson, Mattias. "Southern African ancient genomes estimate modern human divergence to 350,000 to 260,000 years ago. Science, 3 november 2017. Vol 358, Is. 6363. p 652 – 655.</ref>, so dat by den anvang van de [[MIS 5]], de "[[megadrought]]", 130.000 jår terügge, der twey vöäroldergrupen warren: draegers van [[Haplogroup L0 (mtDNA)|mt-DNA haplogrup L0]] in südelik Afrika, de vöärolders van de Khoi-San en draegers van [[Macro-haplogroup L (mtDNA)|haplogrup L1-6]] in midden- en oustelik afrika, de vöärolders van de rest van alle lüde.
+
+Döärdat se so vroo al uutbreidden en uut mekander güngen, warren de Khoisan tüsken 150.000 en 70.000 jår eleaden de längste tyd up de moderne menskelike tydlyne de gröätste grup mensken, töt dat se vanaf dee tyd so händig an [[Eurasie]] intröäken.<ref>[http://www.nature.com/ncomms/2014/141204/ncomms6692/full/ncomms6692.html 
+Kim, Hie Lim, et al. "Khoisan hunter-gatherers have been the largest population throughout most of modern-human demographic history." [[Nature Communications]], 4 December 2014. Vol. 5. p 5692.]</ref> Se warren vöäle wydverbreider as nu. Öär terügloup in antallen hevt vöäral te maken med de [[Bantu-trek]].
+
+They were much more widespread than today, their modern distribution being due to their decimation in the course of the [[Bantu expansion]]. They were dispersed throughout much of Southern and South-Eastern Africa. There was also a significant back-migration of bearers of L0 towards eastern Africa between 120 and 75 kya. Rito et al. (2013) speculate that pressure from such back-migration may even have contributed to the dispersal of East African populations out of Africa at about 70 kya.<ref name=Rito2013>{{cite journal |last1=Rito |first1=Teresa |last2=Richards |first2=Martin B. |last3=Fernandes |first3=Verónica |last4=Alshamali |first4=Farida |last5=Cerny |first5=Viktor |last6=Pereira |first6=Luísa |last7=Soares |first7=Pedro |last8=Gilbert |first8=Tom |title=The First Modern Human Dispersals across Africa |journal=PLoS ONE |date=13 November 2013 |volume=8 |issue=11 |pages=e80031 |doi=10.1371/journal.pone.0080031 |pmid=24236171 |pmc=3827445 }}</ref>
+"By ~130 ka two distinct groups of anatomically modern humans co-existed in Africa: broadly, the ancestors of many modern-day Khoe and San populations in the south and a second central/eastern African group that includes the ancestors of most extant worldwide populations. Early modern human dispersals correlate with climate changes, particularly the tropical African “megadroughts” of MIS 5 (marine isotope stage 5, 135–75 ka) which paradoxically may have facilitated expansions in central and eastern Africa, ultimately triggering the dispersal out of Africa of people carrying haplogroup L3 ~60 ka. Two south to east migrations are discernible within haplogroup L0. One, between 120 and 75 ka, represents the first unambiguous long-range modern human dispersal detected by mtDNA and might have allowed the dispersal of several markers of modernity. A second one, within the last 20 ka signalled by L0d, may have been responsible for the spread of southern click-consonant languages to eastern Africa, contrary to the view that these eastern examples constitute relics of an ancient, much wider distribution."
+
+{{anchor|Capoid}}
+[[File:Carleton Coon races after Pleistocene.PNG|thumb|upright=1.2| {{legend0|#ff00ff|}} Approximate distribution of [[Middle Stone Age]] Capoids at the end of the Pleistocene (12,000 years ago) shown in magenta (according to   [[Carleton S. Coon|C. S. Coon]] 1963).]]
+
+The term ''Capoid'' was introduced as a racial category uniting the Khoikhoi and San peoples as separate from other sub-Saharan populations was proposed by [[Carleton S. Coon]] (1962). It is  named for the [[Cape of Good Hope]].<ref name="ReferenceA">''[[The Origin of Races]]'' (1962).
+Moore, Ruth ''Evolution'' (Life Nature Library) New York:1962 Time, Inc. Chapter 8: "The Emergence of Modern ''Homo sapiens''" Page 173--First page of picture section "Man and His Genes": The ''Capoid'' race is identified as one of the five major races of mankind, along with the ''[[Mongoloid race|Mongoloid]]'', ''[[Congoid]]'', ''[[Caucasoid race|Caucasoid]]'', and ''[[Australoid]]'' races (pictures of a person typical of each race are shown)</ref> Coon (1962) proposed that the term "[[Negroid]]" should be abandoned, and the sub-Saharan African populations of West African stock (including the [[Bantu people|Bantu]]) should be termed "[[Congoid]]" instead.<ref name="ReferenceA"/> Cavalli-Sforza at al. (1994) used the term ''Khoisanid'' instead of Coon's "Capoid".<ref>[[Luigi Luca Cavalli-Sforza|Cavalli-Sforza, L. Luca]]; Menozzi, Paolo; and Piazza Alberto ''The History and Geography of Human Genes'' Princeton, New Jersey: 1994 Princeton University Press "Khoisanids" pp. 174–177</ref> The observation of a significant difference between  the Khoisan and the populations of [[Congoid|West African]] stock was not original to Coon, it had been noted as early as 1684 [[François Bernier]], the early modern author who originally introduced the French word ''race'' to refer to the large divisions of mankind. Bernier outside of five large divisions described in more detail proposes the  possible addition of more categories, primarily for  "the Blacks of the Cape of Good Hope" (''les Noirs du Cap de bonne Esperance''), which seemed to him to be of significantly different build from most other populations below the Sahara.<ref>Anonymous [F. Bernier], [http://gallica.bnf.fr/ark:/12148/bpt6k56535g/f135.item "Nouvelle division de la terre par les différentes espèces ou races qui l'habitent"], ''Journal des Sçavants'', 24 April 1684, [[:File:Nouvelle division de la terre, par les différentes espèces ou races d'homme qui l'habitent.png|p. 133]]&ndash;140. '' les  Noirs du Cap de bonne Esperance semblent estre d'une autre espece que ceux du reste de l'Afrique. '' (p. 136). See also Charles Frankel, ''La science face au racisme'' (1986), [https://books.google.ch/books?id=szfsLo3VSVAC&pg=PA41  41f.]</ref>
 
 ==Språken==
 
